Move most code to a module

--- a/planner.ipynb
+++ b/planner.ipynb
@@ -2,270 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00524276319242c1becae66c1dd3f074"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from typing import List, Optional, Union\n",
-    "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
-    "import datetime\n",
+    "import planner\n",
     "\n",
-    "\n",
-    "class PlanItem:\n",
-    "    __slots__ = [\"name\", \"time\", \"is_finished\"]\n",
-    "\n",
-    "    def __init__(self, name: str, time: int, is_finished=False):\n",
-    "        self.name = name\n",
-    "        self.time = time\n",
-    "        self.is_finished = is_finished\n",
-    "\n",
-    "\n",
-    "class PlanController:\n",
-    "    __slots__ = [\n",
-    "        \"plans\",\n",
-    "        \"container\",\n",
-    "        \"_plan_text\",\n",
-    "        \"_end_time_text\",\n",
-    "        \"_time_per_weekday_text\",\n",
-    "        \"_time_per_weekend_text\",\n",
-    "        \"_long_time_box\",\n",
-    "        \"_finish_time_label\",\n",
-    "        \"_time_left\",\n",
-    "        \"_plan_box\",\n",
-    "    ]\n",
-    "\n",
-    "    def __init__(self, plan_string: str, end_time_string: str = \"\",\n",
-    "                 is_long_time: bool = False, time_per_weekday: str = \"\", time_per_weekend: str = \"\"):\n",
-    "        self.plans = self._parse_plan(plan_string)\n",
-    "\n",
-    "        # Construct widgets\n",
-    "\n",
-    "        plan_text = widgets.Textarea(layout=widgets.Layout(height=\"20rem\", width=\"100%\"))\n",
-    "\n",
-    "        end_time_title = widgets.Label(value=\"End time: \")\n",
-    "        end_time_text = widgets.Text(value=end_time_string)\n",
-    "        end_time_box = widgets.HBox(children=[end_time_title, end_time_text])\n",
-    "\n",
-    "        long_time_title = widgets.Label(value=\"Long time\")\n",
-    "        long_time_check = widgets.Checkbox(value=is_long_time, layout= widgets.Layout(width=\"20px\"))\n",
-    "        time_per_weekday_title = widgets.Label(value=\"Time per weekday: \", layout=widgets.Layout(width=\"150px\"))\n",
-    "        time_per_weekday_text= widgets.Text(value=time_per_weekday, layout=widgets.Layout(width=\"100px\"))\n",
-    "        time_per_weekend_title = widgets.Label(value=\"Time per weekend: \", layout=widgets.Layout(width=\"150px\"))\n",
-    "        time_per_weekend_text= widgets.Text(value=time_per_weekend, layout=widgets.Layout(width=\"100px\"))\n",
-    "        long_time_box = widgets.HBox()\n",
-    "        \n",
-    "        finish_time_label = widgets.Label(value=\"Planning to finish in: \", layout=widgets.Layout(width=\"100%\"))\n",
-    "        \n",
-    "        time_left = widgets.Label(value=\"Time left: \", layout=widgets.Layout(width=\"100%\"))\n",
-    "\n",
-    "        plan_box = widgets.VBox()\n",
-    "\n",
-    "        refresh_button = widgets.Button(description=\"Refresh\")\n",
-    "\n",
-    "        container = widgets.VBox()\n",
-    "        container.children = [plan_text,\n",
-    "                              end_time_box, long_time_box, finish_time_label, time_left,\n",
-    "                              plan_box, refresh_button]\n",
-    "\n",
-    "        #\n",
-    "\n",
-    "        self.container = container\n",
-    "        self._plan_text = plan_text\n",
-    "        self._end_time_text = end_time_text\n",
-    "        self._long_time_box = long_time_box\n",
-    "        self._time_per_weekday_text = time_per_weekday_text\n",
-    "        self._time_per_weekend_text = time_per_weekend_text\n",
-    "        self._finish_time_label = finish_time_label\n",
-    "        self._time_left = time_left\n",
-    "        self._plan_box = plan_box\n",
-    "\n",
-    "        plan_text.observe(lambda change: self._plan_text_changed(change), \"value\")\n",
-    "        end_time_text.observe(lambda change: self._update_time(), \"value\")\n",
-    "        refresh_button.on_click(lambda button: self._update_time())\n",
-    "        \n",
-    "        def update_long_time(new_is_long_time):\n",
-    "            if new_is_long_time:\n",
-    "                long_time_box.children = [long_time_title, long_time_check,\n",
-    "                                     time_per_weekday_title, time_per_weekday_text,\n",
-    "                                     time_per_weekend_title, time_per_weekend_text\n",
-    "                                    ]\n",
-    "            else:\n",
-    "                long_time_box.children = [long_time_title, long_time_check]\n",
-    "            self._update_time()\n",
-    "            \n",
-    "        long_time_check.observe(lambda change: update_long_time(change[\"new\"]), \"value\")\n",
-    "        \n",
-    "        self._update_plan_box()\n",
-    "        self._update_time()\n",
-    "        self._update_plan_text()\n",
-    "        update_long_time(is_long_time)\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def _parse_plan(s: str) -> List[PlanItem]:\n",
-    "        def parse_item(item: str) -> Optional[PlanItem]:\n",
-    "            strings = item.split(\" \")\n",
-    "            if len(strings) < 2:\n",
-    "                return None\n",
-    "            else:\n",
-    "                name_part = strings[:-1]\n",
-    "                time_part = strings[-1]\n",
-    "\n",
-    "                if name_part[0].lower() == \"done;\":\n",
-    "                    is_finished = True\n",
-    "                    name = \" \".join(name_part[1:])\n",
-    "                else:\n",
-    "                    is_finished = False\n",
-    "                    name = \" \".join(name_part)\n",
-    "\n",
-    "                days = time_part.split(\"d\")\n",
-    "\n",
-    "                if len(days) == 2:\n",
-    "                    try:\n",
-    "                        day_number = float(days[0])\n",
-    "                    except ValueError:\n",
-    "                        day_number = 0\n",
-    "                else:\n",
-    "                    day_number = 0\n",
-    "\n",
-    "                hours = days[-1].split(\"h\")\n",
-    "\n",
-    "                if len(hours) == 2:\n",
-    "                    try:\n",
-    "                        hour_number = float(hours[0])\n",
-    "                    except ValueError:\n",
-    "                        hour_number = 0\n",
-    "                else:\n",
-    "                    hour_number = 0\n",
-    "\n",
-    "                minutes = hours[-1].split(\"min\")\n",
-    "\n",
-    "                if len(minutes) == 2:\n",
-    "                    try:\n",
-    "                        minute_number = float(minutes[0])\n",
-    "                    except ValueError:\n",
-    "                        minute_number = 0\n",
-    "                else:\n",
-    "                    minute_number = 0\n",
-    "\n",
-    "                return PlanItem(name, day_number * 24 * 3600 + hour_number * 3600 + minute_number * 60, is_finished)\n",
-    "\n",
-    "        return [parsed for parsed in (parse_item(item) for item in s.split(\"\\n\")) if parsed is not None]\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def _time_str(seconds: Union[int, float]) -> str:\n",
-    "        days, left = divmod(seconds, 86400)\n",
-    "        hours, left = divmod(left, 3600)\n",
-    "        minutes, left = divmod(left, 60)\n",
-    "\n",
-    "        if days != 0:\n",
-    "            return \"{day:d}d{hour:d}h{minute:d}min\".format(day=int(days), hour=int(hours), minute=int(minutes))\n",
-    "        elif hours != 0:\n",
-    "            return \"{hour:d}h{minute:d}min\".format(hour=int(hours), minute=int(minutes))\n",
-    "        else:\n",
-    "            return \"{minute:d}min\".format(minute=int(minutes))\n",
-    "\n",
-    "    def _update_time(self):\n",
-    "        planning_finish: int = sum(item.time for item in self.plans if not item.is_finished)\n",
-    "\n",
-    "        self._finish_time_label.value = \"Planning to finish in: {}\".format(self._time_str(planning_finish))\n",
-    "\n",
-    "        try:\n",
-    "            finish_time = datetime.datetime.strptime(self._end_time_text.value, \"%H:%M\")\n",
-    "            finish_datetime = datetime.datetime.combine(datetime.datetime.now().date(), finish_time.time())\n",
-    "            now = datetime.datetime.now()\n",
-    "            duration = (finish_datetime - now).total_seconds()\n",
-    "            if duration < 0:\n",
-    "                duration += 86400\n",
-    "\n",
-    "            duration_minus_plan = duration - planning_finish\n",
-    "            if duration_minus_plan >= 0:\n",
-    "                duration_minus_plan_str = self._time_str(duration_minus_plan)\n",
-    "            else:\n",
-    "                duration_minus_plan_str = \"-\" + self._time_str(-duration_minus_plan)\n",
-    "\n",
-    "            self._time_left.value = \"Time left: {}, -Plan: {}\".format(self._time_str(duration), duration_minus_plan_str)\n",
-    "        except ValueError:\n",
-    "            self._time_left.value = \"Time left: \"\n",
-    "\n",
-    "    def _update_plan_box(self):\n",
-    "        def item_box(item: PlanItem, index: int) -> widgets.HBox:\n",
-    "            def on_check_changed(change):\n",
-    "                self.plans[index].is_finished = change[\"new\"]\n",
-    "                self._update_time()\n",
-    "                self._update_plan_text()\n",
-    "\n",
-    "            check = widgets.Checkbox(value=item.is_finished, layout=widgets.Layout(width=\"20px\"))\n",
-    "            check.observe(on_check_changed, \"value\")\n",
-    "\n",
-    "            name_text = item.name + \" \" + self._time_str(item.time)\n",
-    "            name_title = widgets.Label(value=name_text, layout=widgets.Layout(width=\"80%\"))\n",
-    "\n",
-    "            return widgets.HBox(children=[check, name_title])\n",
-    "\n",
-    "        self._plan_box.children = [item_box(item, i) for i, item in enumerate(self.plans)]\n",
-    "\n",
-    "    def _update_plan_text(self):\n",
-    "        text = \"\"\n",
-    "        for item in self.plans:\n",
-    "            if item.is_finished:\n",
-    "                finish_prefix = \"Done; \"\n",
-    "            else:\n",
-    "                finish_prefix = \"\"\n",
-    "\n",
-    "            text += finish_prefix + item.name + \" \" + self._time_str(item.time) + \"\\n\"\n",
-    "\n",
-    "        self._plan_text.value = text\n",
-    "        \n",
-    "\n",
-    "    def _plan_text_changed(self, change):\n",
-    "        new_plan = change[\"new\"]\n",
-    "        self.plans = self._parse_plan(new_plan)\n",
-    "\n",
-    "        self._update_plan_box()\n",
-    "        self._update_time()\n",
-    "\n",
-    "\n",
-    "def custom_display():\n",
-    "    plan_text = \"\"\"\\\n",
+    "plan_text = \"\"\"\\\n",
     "Done; do something a 20min\n",
     "\"\"\"\n",
-    "    controller = PlanController(plan_text, \"23:30\")\n",
-    "    display(controller.container)\n",
-    "    \n",
-    "\n",
-    "custom_display()"
+    "controller = planner.PlanController(plan_text, \"23:30\")\n",
+    "display(controller.container)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(ipywidgets.widgets.widget_bool._Bool,)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "widgets.Checkbox.__bases__"
-   ]
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
