Change min to simpler m

--- a/planner.ipynb
+++ b/planner.ipynb
@@ -2,28 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5171a65e203f499eab9639c644c9022f"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import display\n",
     "import planner\n",
     "\n",
     "plan_text = \"\"\"\\\n",
-    "Done; do something a 20min\n",
+    "Done; do something a 20m\n",
     "\"\"\"\n",
     "controller = planner.PlanController(plan_text, \"23:30\")\n",
     "display(controller.container)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
