--- a/planner.ipynb
+++ b/planner.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5171a65e203f499eab9639c644c9022f"
+       "model_id": "e3a04a3f56fd4b3d9698818f4509320a"
       }
      },
      "metadata": {},
@@ -24,6 +24,30 @@
     "\"\"\"\n",
     "controller = planner.PlanController(plan_text, \"23:30\")\n",
     "display(controller.container)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "18db64f2c57d41fe904364aee6755b6c"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display\n",
+    "import logger\n",
+    "\n",
+    "\n",
+    "log_controller = logger.LogController()\n",
+    "display(log_controller.container)"
    ]
   },
   {
