Update notebook for long time planner

--- a/planner.ipynb
+++ b/planner.ipynb
@@ -8,7 +8,16 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3a04a3f56fd4b3d9698818f4509320a"
+       "model_id": "8714beab7f334704aba907e5110f67ef"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "46d2e08d525443c5baa5814864990c9c"
       }
      },
      "metadata": {},
@@ -19,11 +28,21 @@
     "from IPython.display import display\n",
     "import planner\n",
     "\n",
+    "\n",
     "plan_text = \"\"\"\\\n",
-    "Done; do something a 20m\n",
+    "do something c 5h\n",
+    "do something d 6h\n",
     "\"\"\"\n",
-    "controller = planner.PlanController(plan_text, \"23:30\")\n",
-    "display(controller.container)"
+    "controller = planner.PlanController(plan_text, \"8-6\", True, \"4h\", \"4h\")\n",
+    "\n",
+    "plan_text2 = \"\"\"\\\n",
+    "do something a 30m\n",
+    "do something b 1h10m\n",
+    "\"\"\"\n",
+    "controller2 = planner.PlanController(plan_text2, \"13:00\")\n",
+    "\n",
+    "display(controller.container)\n",
+    "display(controller2.container)"
    ]
   },
   {
@@ -34,7 +53,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18db64f2c57d41fe904364aee6755b6c"
+       "model_id": "f8df9021fcc8486cb3e9e15a0faca44e"
       }
      },
      "metadata": {},
@@ -46,7 +65,8 @@
     "import logger\n",
     "\n",
     "\n",
-    "log_controller = logger.LogController()\n",
+    "logs = []\n",
+    "log_controller = logger.LogController(logs)\n",
     "display(log_controller.container)"
    ]
   },
