Update notebook examples for plans without time

--- a/planner.ipynb
+++ b/planner.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8714beab7f334704aba907e5110f67ef"
+       "model_id": "a1346c8bdef04b0bb5e74c153d0c1c82"
       }
      },
      "metadata": {},
@@ -17,7 +17,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "46d2e08d525443c5baa5814864990c9c"
+       "model_id": "0552dd66b4ae443d930a1453ec5113b8"
       }
      },
      "metadata": {},
@@ -32,6 +32,9 @@
     "plan_text = \"\"\"\\\n",
     "do something c 5h\n",
     "do something d 6h\n",
+    "\n",
+    "future plan e\n",
+    "future plan f\n",
     "\"\"\"\n",
     "controller = planner.PlanController(plan_text, \"8-6\", True, \"4h\", \"4h\")\n",
     "\n",
@@ -53,7 +56,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f8df9021fcc8486cb3e9e15a0faca44e"
+       "model_id": "0b27de90723f47e4879638a0883b0221"
       }
      },
      "metadata": {},
@@ -64,8 +67,8 @@
     "from IPython.display import display\n",
     "import logger\n",
     "\n",
-    "\n",
-    "logs = []\n",
+    "logs = [\n",
+    "]\n",
     "log_controller = logger.LogController(logs)\n",
     "display(log_controller.container)"
    ]
