Update notebook for the new file saving API

--- a/planner.ipynb
+++ b/planner.ipynb
@@ -6,20 +6,12 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1346c8bdef04b0bb5e74c153d0c1c82"
-      }
-     },
+     "data": {},
      "metadata": {},
      "output_type": "display_data"
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0552dd66b4ae443d930a1453ec5113b8"
-      }
-     },
+     "data": {},
      "metadata": {},
      "output_type": "display_data"
     }
@@ -28,21 +20,8 @@
     "from IPython.display import display\n",
     "import planner\n",
     "\n",
-    "\n",
-    "plan_text = \"\"\"\\\n",
-    "do something c 5h\n",
-    "do something d 6h\n",
-    "\n",
-    "future plan e\n",
-    "future plan f\n",
-    "\"\"\"\n",
-    "controller = planner.PlanController(plan_text, \"8-6\", True, \"4h\", \"4h\")\n",
-    "\n",
-    "plan_text2 = \"\"\"\\\n",
-    "do something a 30m\n",
-    "do something b 1h10m\n",
-    "\"\"\"\n",
-    "controller2 = planner.PlanController(plan_text2, \"13:00\")\n",
+    "controller = planner.PlanController(\"long-plan\")\n",
+    "controller2 = planner.PlanController(\"plan\")\n",
     "\n",
     "display(controller.container)\n",
     "display(controller2.container)"
@@ -54,11 +33,7 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b27de90723f47e4879638a0883b0221"
-      }
-     },
+     "data": {},
      "metadata": {},
      "output_type": "display_data"
     }
@@ -67,9 +42,10 @@
     "from IPython.display import display\n",
     "import logger\n",
     "\n",
-    "logs = [\n",
-    "]\n",
-    "log_controller = logger.LogController(logs)\n",
+    "import importlib\n",
+    "importlib.reload(logger)\n",
+    "\n",
+    "log_controller = logger.LogController(\"logs\")\n",
     "display(log_controller.container)"
    ]
   },
@@ -99,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
